# retro-snake

./: CMakeLists.txt  LICENSE  main.cpp
Assets/: GameObject.h
Assets/Objects/: DebugTriangle.cpp  DebugTriangle.h  FoodSpawner.cpp  FoodSpawner.h  GridLayout.cpp  GridLayout.h  Snake.cpp  Snake.h  Text.cpp  Text.h
Engine/: Config.h  Engine.cpp  Engine.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Utils.cpp
Engine/Graphics/: Graphics.cpp  Graphics.h  Timer.cpp  Timer.h
Scenes/: EndScene.cpp  EndScene.h  GameScene.cpp  GameScene.h  SceneManager.cpp  SceneManager.h  StartScene.cpp  StartScene.h
